--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,11 @@ services:
       start_period: 20s
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
     container_name: todo-nginx
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - frontend_net
     depends_on:
